--- a/libfftpack/README
+++ b/libfftpack/README
@@ -14,7 +14,7 @@ double precision incarnation by Hugh C. Pumphrey
 (http://www.netlib.org/fftpack/dp.tgz).
 
 I replaced the iterative sine and cosine calculations in radfg() and radbg()
-by an exact calculation, which slightly improves the transform accuracy for
+by another algorithm, which slightly improves the transform accuracy for
 real FFTs with lengths containing large prime factors.
 
 Since FFTPACK becomes quite slow for FFT lengths with large prime factors
